--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "start": "node server/server.js",
-        "test": "NODE_ENV=server/tests nyc --exclude=tests --exclude=exception --reporter=lcov --reporter=text ./node_modules/mocha/bin/mocha server/tests/**/*spec.js --reporter spec",
+        "test": "nyc --exclude=server/tests --reporter=lcov --reporter=text ./node_modules/mocha/bin/mocha server/tests/**/*spec.js --reporter spec",
         "coverage": "./node_modules/.bin/nyc report --statements 80 --functions 80 --lines 80 --branches 80 --check-coverage --reporter=text-summary --per-file"
     },
     "author": "German Guzman",
@@ -18,7 +18,7 @@
     "devDependencies": {
         "chai": "^4.2.0",
         "mocha": "^8.0.1",
-        "mockgoose": "^8.0.4",
+        "nock": "^13.0.2",
         "nyc": "^15.1.0",
         "supertest": "^4.0.2"
     }
