--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "mocha": "^8.0.1",
         "nock": "^13.0.2",
         "nyc": "^15.1.0",
+        "request": "^2.88.2",
         "supertest": "^4.0.2"
     }
 }
