--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "main": "index.js",
     "scripts": {
         "start": "node server/server.js",
-        "test": "nyc --exclude=server/tests --reporter=lcov --reporter=text ./node_modules/mocha/bin/mocha server/tests/**/*spec.js --reporter spec",
-        "coverage": "./node_modules/.bin/nyc report --statements 80 --functions 80 --lines 80 --branches 80 --check-coverage --reporter=text-summary --per-file"
+        "test": "jest --config=jest.config.json --detectOpenHandles"
     },
     "author": "German Guzman",
     "license": "ISC",
@@ -17,7 +16,9 @@
         "mongoose": "^5.9.20"
     },
     "devDependencies": {
+        "@shelf/jest-mongodb": "^1.2.1",
         "chai": "^4.2.0",
+        "jest": "^26.1.0",
         "mocha": "^8.0.1",
         "nock": "^13.0.2",
         "nyc": "^15.1.0",
