Tests de endpoints y README final

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,5 +1,6 @@
 {
     "preset": "@shelf/jest-mongodb",
+    "testEnvironment": "node",
     "collectCoverage": true,
     "coverageThreshold": {
         "global": {
