--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
         "jest": "^26.1.0",
         "nock": "^13.0.2",
         "nyc": "^15.1.0",
-        "supertest": "^4.0.2"
+        "request": "^2.88.2"
     }
 }
